objects/Investigation__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned to Field Agent</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Investigations</relationshipLabel>
        <relationshipName>Investigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_did_you_say_in_response__c</fullName>
        <label>What did you say in response?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_happened__c</fullName>
        <label>What happened?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Where_did_the_incident_happen__c</fullName>
        <label>Where did the incident happen?</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witness_information__c</fullName>
        <label>Witness information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Investigation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Investigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>